--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             (來源: 1222_opinion_sentence_district_embedding.csv)
             兩個檔案共通的案號數目: 12414
        -->
-      <p class="lead mb-0 text-start">判決書數目:  19712 <br/>
-        見解數目:  62409 <br/>
+      <p class="lead mb-0 text-start">判決書數目:  24970 <br/>
+        <!-- 見解數目:  62409 <br/> -->
         </p>
       <!-- <p class="lead mb-0">基本資訊資料數目:  19712 (來源: 111地院判決書_無簡_全文_移除符號.csv)<br/>
         見解資料數目:  62409 (來源: 1222_opinion_sentence_district_embedding.csv)<br/>
